--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,17 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+
+		<!--  MyBatis Generator  -->
+		<!--  Java接口和实体类  -->
+		<targetJavaProject>${basedir}/src/main/java</targetJavaProject>
+		<targetMapperPackage>com.omg.mapper</targetMapperPackage>
+		<targetModelPackage>com.omg.entity</targetModelPackage>
+		<!--  XML生成路径  -->
+		<targetResourcesProject>${basedir}/src/main/resources/mapper</targetResourcesProject>
+		<targetXMLPackage></targetXMLPackage>
+		<!--  依赖版本  -->
+		<mapper.version>1.0.0</mapper.version>
 	</properties>
 
 	<dependencies>
@@ -114,11 +125,12 @@
 			<version>4.2.1</version>
 		</dependency>
 		<!--通用Mapper-->
-		<dependency>
+		<!--<dependency>
 			<groupId>tk.mybatis</groupId>
 			<artifactId>mapper</artifactId>
 			<version>3.3.9</version>
-		</dependency>
+		</dependency>-->
+		<!--原mq-->
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-all</artifactId>
@@ -128,6 +140,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-activemq</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -136,6 +153,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
 		</plugins>
 	</build>
 
