--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,16 @@
 			<artifactId>mapper-spring-boot-starter</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.patchca</groupId>
+			<artifactId>patchca</artifactId>
+			<version>0.5.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
