1.装饰者模式练习

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,17 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #mybatis
 mybatis.mapper-locations=classpath:mapper/**/*.xml
+#保证使用insert、update语句不报无效类型1111错误
+mybatis.configuration.jdbc-type-for-null=null
+#pagehelper 配置
+pagehelper.helper-dialect=mysql
+pagehelper.reasonable=true
+pagehelper.params=count=countSql
 
 logging.level.com.example.demo.mapper=debug
 #logging.level.root=INFO
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate=ERROR
+
+# 需要排除的Url
+excludePathPatterns=/error,/login
