--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,17 @@
 			<groupId>org.patchca</groupId>
 			<artifactId>patchca</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.20</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.46</version>
+		</dependency>
 	</dependencies>
 
 	<build>
