--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/omg
+spring.datasource.url=jdbc:mysql://47.101.155.4:3306/omg?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #mybatis
 mybatis.mapper-locations=classpath:mapper/**/*.xml
-#\uFFFD\uFFFD\u05A4\u02B9\uFFFD\uFFFDinsert\uFFFD\uFFFDupdate\uFFFD\uFFFD\u4CBB\uFFFD\uFFFD\uFFFD\uFFFD\u0427\uFFFD\uFFFD\uFFFD\uFFFD1111\uFFFD\uFFFD\uFFFD\uFFFD
 mybatis.configuration.jdbc-type-for-null=null
-#pagehelper \uFFFD\uFFFD\uFFFD\uFFFD
+#pagehelper
 pagehelper.helper-dialect=mysql
 pagehelper.reasonable=true
 pagehelper.params=count=countSql
@@ -19,13 +18,13 @@ logging.level.com.example.demo.mapper=debug
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate=ERROR
 
-# \uFFFD\uFFFD\u04AA\uFFFD\u0173\uFFFD\uFFFD\uFFFDUrl
+# \u6392\u9664\u7684Url
 excludePathPatterns=/error,/login
 
 # Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=0
 # Redis\u670D\u52A1\u5668\u5730\u5740
-spring.redis.host=127.0.0.1
+spring.redis.host=47.101.155.4
 # Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
 spring.redis.port=6379
 # Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
