--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,8 @@ pagehelper.helper-dialect=mysql
 pagehelper.reasonable=true
 pagehelper.params=count=countSql
 
-logging.level.com.example.demo.mapper=debug
+#\u6307\u5B9Adebug\u8986\u76D6\u8303\u56F4
+logging.level.com.omg=debug
 #logging.level.root=INFO
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate=ERROR
