--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,13 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#\u6570\u636E\u5E931
+spring.datasource.tourismPublic.url=jdbc:mysql://47.101.155.4:3306/omg_test?useUnicode=true&characterEncoding=utf8
+spring.datasource.tourismPublic.username=root
+spring.datasource.tourismPublic.password=123456
+spring.datasource.tourismPublic.driverClassName = com.mysql.jdbc.Driver
+# \u9ED8\u8BA4\u4F7F\u7528\u7684\u6570\u636E\u6E90
+dynamicDatasource.defaultDataSource = omg
 #mybatis
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 mybatis.configuration.jdbc-type-for-null=null
