--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,10 @@
 			<version>3.2.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>net.pusuo</groupId>
 			<artifactId>patchca</artifactId>
 			<version>0.5.0</version>
