--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
 			<artifactId>httpcore</artifactId>
 			<version>4.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<!--用于引入传统的xml或者properties配置-->
 		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
