1.定时任务 2.user类修改

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,5 @@ spring.redis.timeout=5000
 spring.jackson.deserialization.accept-empty-string-as-null-object=true
 
 spring.mvc.favicon.enabled=true
+
+spring.mvc.static-path-pattern=/static/**
