--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,12 @@
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
+		<!-- 不用redis-session -->
+		<!--<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-core</artifactId>
+			<version>2.1.4.RELEASE</version>
+		</dependency>-->
 		<!--用于引入传统的xml或者properties配置-->
 		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
