--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=80
 
 spring.datasource.url=jdbc:mysql://47.101.155.4:3306/omg?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
@@ -27,7 +27,7 @@ logging.level.com.omg=debug
 #logging.level.org.hibernate=ERROR
 
 # \u6392\u9664\u7684Url
-excludePathPatterns=/error,/login
+excludePathPatterns=/error,/login,/verifyCode
 
 # Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=0
