1.静态资源配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ logging.level.com.omg=debug
 #logging.level.org.hibernate=ERROR
 
 # \u6392\u9664\u7684Url
-excludePathPatterns=/error,/login,/verifyCode
+excludePathPatterns=/error,/login,/verifyCode,/static/**
 
 # Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=0
@@ -52,4 +52,4 @@ spring.jackson.deserialization.accept-empty-string-as-null-object=true
 
 spring.mvc.favicon.enabled=true
 
-spring.mvc.static-path-pattern=/static/**
+spring.mvc.static-path-pattern=/resources/**
