1.redis zset使用 2.zk测试

--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,11 @@
 			<version>4.3.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.6</version>
+		</dependency>
 		<!-- 不用redis-session -->
 		<!--<dependency>
 			<groupId>org.springframework.session</groupId>
