1.redis zset使用 2.zk测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,4 +54,5 @@ spring.jackson.deserialization.accept-empty-string-as-null-object=true
 
 spring.mvc.favicon.enabled=true
 
-spring.mvc.static-path-pattern=/resources/**
+spring.mvc.static-path-pattern=/**
+spring.resources.static-locations= - file:D:/testCode/first_omg/old-omg/omg/target/static
