--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,30 @@ spring.mvc.favicon.enabled=true
 
 spring.mvc.static-path-pattern=/**
 spring.resources.static-locations= - file:D:/testCode/first_omg/old-omg/omg/target/static
+
+###producer
+#\u8BE5\u5E94\u7528\u662F\u5426\u542F\u7528\u751F\u4EA7\u8005
+rocketmq.producer.isOnOff=on
+#\u53D1\u9001\u540C\u4E00\u7C7B\u6D88\u606F\u7684\u8BBE\u7F6E\u4E3A\u540C\u4E00\u4E2Agroup\uFF0C\u4FDD\u8BC1\u552F\u4E00,\u9ED8\u8BA4\u4E0D\u9700\u8981\u8BBE\u7F6E\uFF0Crocketmq\u4F1A\u4F7F\u7528ip@pid(pid\u4EE3\u8868jvm\u540D\u5B57)\u4F5C\u4E3A\u552F\u4E00\u6807\u793A
+rocketmq.producer.groupName=omg
+#mq\u7684nameserver\u5730\u5740
+rocketmq.producer.namesrvAddr=127.0.0.1:9876
+#\u6D88\u606F\u6700\u5927\u957F\u5EA6 \u9ED8\u8BA41024*4(4M)
+rocketmq.producer.maxMessageSize=4096
+#\u53D1\u9001\u6D88\u606F\u8D85\u65F6\u65F6\u95F4,\u9ED8\u8BA43000
+rocketmq.producer.sendMsgTimeout=3000
+#\u53D1\u9001\u6D88\u606F\u5931\u8D25\u91CD\u8BD5\u6B21\u6570\uFF0C\u9ED8\u8BA42
+rocketmq.producer.retryTimesWhenSendFailed=2
+
+###consumer
+##\u8BE5\u5E94\u7528\u662F\u5426\u542F\u7528\u6D88\u8D39\u8005
+rocketmq.consumer.isOnOff=on
+rocketmq.consumer.groupName=omg
+#mq\u7684nameserver\u5730\u5740
+rocketmq.consumer.namesrvAddr=127.0.0.1:9876    
+#\u8BE5\u6D88\u8D39\u8005\u8BA2\u9605\u7684\u4E3B\u9898\u548Ctags("*"\u53F7\u8868\u793A\u8BA2\u9605\u8BE5\u4E3B\u9898\u4E0B\u6240\u6709\u7684tags),\u683C\u5F0F\uFF1Atopic~tag1||tag2||tag3;topic2~*;
+rocketmq.consumer.topics=DemoTopic~*;
+rocketmq.consumer.consumeThreadMin=20
+rocketmq.consumer.consumeThreadMax=64
+#\u8BBE\u7F6E\u4E00\u6B21\u6D88\u8D39\u6D88\u606F\u7684\u6761\u6570\uFF0C\u9ED8\u8BA4\u4E3A1\u6761
+rocketmq.consumer.consumeMessageBatchMaxSize=1
