--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,7 +4,7 @@ mapper.Mapper = tk.mybatis.mapper.common.Mapper
 
 #MySQL\u5B9E\u4F53\u7C7B\u751F\u6210\u65B9\u5F0F
 jdbc.driverClass = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/omg?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
+jdbc.url = jdbc:mysql://47.101.155.4:3306/omg?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
 jdbc.user = root
 jdbc.password = 123456
 aalib.code.msg.map.500=\u670D\u52A1\u5668\u672A\u77E5\u5F02\u5E38
