--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,19 @@
             <artifactId>ExcelKit</artifactId>
             <version>1.0.1-SNAPSHOT</version>
         </dependency>
+
+        <!-- swagger-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <!--<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.7.0</version>
+        </dependency>-->
 	</dependencies>
 
 	<build>
