--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ logging.level.com.omg=debug
 #logging.level.org.hibernate=ERROR
 
 # \u6392\u9664\u7684Url
-excludePathPatterns=/error,/login,/verifyCode,/static/**
+excludePathPatterns=/error,/login,/verifyCode,/static/**,/swagger-ui.html
 
 # Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=0
