spring boot 整合rabbitmq，以及ack应答机制使用

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -84,4 +84,18 @@ rocketmq.consumer.consumeThreadMax=64
 #\u8BBE\u7F6E\u4E00\u6B21\u6D88\u8D39\u6D88\u606F\u7684\u6761\u6570\uFF0C\u9ED8\u8BA4\u4E3A1\u6761
 rocketmq.consumer.consumeMessageBatchMaxSize=1
 
-nacos.config.server-addr=47.101.155.4:8848
+#nacos.config.server-addr=47.101.155.4:8848
+
+spring.rabbitmq.host= 47.101.155.4
+spring.rabbitmq.port= 5672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
+spring.rabbitmq.virtualHost = /
+
+
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+spring.rabbitmq.publisher-confirms=true
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.listener.simple.retry.enabled = true
+spring.rabbitmq.listener.simple.retry.initial-interval = 1000
+spring.rabbitmq.listener.simple.retry.max-attempts = 3
